# CPP-Project-Template

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: deploy.yml  preview.yml
cmake/: deb.cmake
doc/: CMakeLists.txt  Doxyfile.in  Doxygenlayout.xml  header.html
include/: example.hpp
src/: main.cpp
tests/: CMakeLists.txt  example.cpp
